--- a/kube_deploy.yaml
+++ b/kube_deploy.yaml
@@ -17,7 +17,7 @@ spec:
         env:
         - name: KAFKA_ADDRESS
           value: kafka.kafka:9092
-        - name: SCHEMA_REGISTRY_ADDRESS
+        - name: SCHEMA_REGISTRY_IP
           value: http://schema-registry.kafka:8081
 	- name: SOURCE_NAME
 	  value: source1
