--- a/stream/build.gradle
+++ b/stream/build.gradle
@@ -16,7 +16,7 @@ repositories {
 ext.kafkaVersion = '0.10.2.0'
 
 dependencies {
-	compile project(':generated_entities')
+	/*compile project(':generated_entities')*/
     compile group: 'com.google.code.gson', name: 'gson', version:'2.6.1'
     compile group: 'org.apache.commons', name:'commons-lang3', version:'3.4'
     compile group: 'org.apache.kafka', name: 'kafka-clients', version: kafkaVersion
